--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div>
+    <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title> Bienvenido a Juangostera</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>La mejor plataforma de cursos, con mas de 850.000 cursos de diferentes temas de tecnología</mat-card-content>
+        <mat-card-actions class="center">
+          <button mat-raised-button color="primary" routerLink="/courses">Vamos a conocer los cursos!</button>
+        </mat-card-actions>
+      </mat-card>
+      <img src="https://online.uconn.edu/wp-content/uploads/sites/3695/2023/09/University-of-Connecticut-Graduate-Certificate-MS-Degree-MA-Degrees-Online-Courses-1-1000x667.webp" alt="">
+
+</div>
