--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar> 
-    <button mat-raised-button color="primary" routerLink="/"><mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon></button> 
+    <button mat-mini-fab routerLink="/"><mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon></button> 
     <span>Juangostera - cursos online</span>
     <span class="spacer"></span>
     <button mat-raised-button color="primary" routerLink="/dashboard">Gestión de cursos</button>
