--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -29,7 +29,7 @@
                         <td>{{course.description}}</td>
                         <td>{{course.duration}}</td>
                         <td>{{course.price}}</td>
-                        <td><button mat-mini-fab color="primary" routerLink="/"><mat-icon fontIcon="edit"></mat-icon></button></td>
+                        <td><button mat-mini-fab color="primary" routerLink="/courseForm"><mat-icon fontIcon="edit"></mat-icon></button></td>
                         <td><button mat-mini-fab color="primary" (click)="deleteCourse(course.id)"><mat-icon fontIcon="delete"></mat-icon></button></td>
                     </tr>
 
